lib/bindings/langs/flutter/breez_sdk_liquidFFI/include/breez_sdk_liquidFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void ffi_breez_sdk_liquid_bindings_rust_future_poll_i16(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16(void* _Nonnull handle
);
void ffi_breez_sdk_liquid_bindings_rust_future_free_i16(void* _Nonnull handle
);
int16_t ffi_breez_sdk_liquid_bindings_rust_future_complete_i16(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_breez_sdk_liquid_bindings_rust_future_poll_u32(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32(void* _Nonnull handle
);
void ffi_breez_sdk_liquid_bindings_rust_future_free_u32(void* _Nonnull handle
);
uint32_t ffi_breez_sdk_liquid_bindings_rust_future_complete_u32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_breez_sdk_liquid_bindings_rust_future_poll_i32(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32(void* _Nonnull handle
);
void ffi_breez_sdk_liquid_bindings_rust_future_free_i32(void* _Nonnull handle
);
int32_t ffi_breez_sdk_liquid_bindings_rust_future_complete_i32(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_breez_sdk_liquid_bindings_rust_future_poll_u64(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64(void* _Nonnull handle
);
void ffi_breez_sdk_liquid_bindings_rust_future_free_u64(void* _Nonnull handle
);
uint64_t ffi_breez_sdk_liquid_bindings_rust_future_complete_u64(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_breez_sdk_liquid_bindings_rust_future_poll_i64(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64(void* _Nonnull handle
);