packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  void ffi_breez_sdk_liquid_bindings_rust_future_poll_i16(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_i16(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_i16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_i16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_i16(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_i16(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i16Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_i16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_i16Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_i16(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_i16(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i16Ptr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_i16');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i16 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_i16Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_u32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_u32(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_u32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_u32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_u32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_u32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_u32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_u32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_u32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_u32(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u32Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_u32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_u32Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_i32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_i32(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_i32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_i32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_i32(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_i32(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_i32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_i32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_i32Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_i32(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_i32(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i32Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_i32');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_i32 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_i32Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_u64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_u64(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_u64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_u64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_u64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_u64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_free_u64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_free_u64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_free_u64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_free_u64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_free_u64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int ffi_breez_sdk_liquid_bindings_rust_future_complete_u64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_complete_u64(
      handle,
      out_status,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u64Ptr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_complete_u64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_complete_u64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_complete_u64Ptr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_poll_i64(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Void> uniffi_callback,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_poll_i64(
      handle,
      uniffi_callback,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_poll_i64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_poll_i64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_poll_i64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  void ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64(
      handle,
    );
  }

  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64');
  late final _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64 =
      _ffi_breez_sdk_liquid_bindings_rust_future_cancel_i64Ptr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
